[gd_scene load_steps=12 format=3 uid="uid://pqecaqihna37"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_hmgxy"]
[ext_resource type="Texture2D" uid="uid://x2a68gj83vgm" path="res://Assets/UI/background.jpeg" id="1_ilk43"]
[ext_resource type="Texture2D" uid="uid://3nupdwrw4f2f" path="res://Assets/UI/blue_button00.png" id="1_ygrvj"]
[ext_resource type="FontFile" uid="uid://c2110jgdu0qkh" path="res://Assets/UI/Kenney Future.ttf" id="2_dr338"]
[ext_resource type="Texture2D" uid="uid://b25qab3btd0sb" path="res://Assets/UI/blue_button02.png" id="2_pum13"]
[ext_resource type="Texture2D" uid="uid://b25gi6ic8o5na" path="res://Assets/UI/grey_button00.png" id="3_p7m0o"]
[ext_resource type="Texture2D" uid="uid://bumg67bm7oggv" path="res://Assets/UI/grey_panel.png" id="3_p465g"]
[ext_resource type="Texture2D" uid="uid://c1nthnkyx7qe4" path="res://Assets/UI/grey_button02.png" id="4_lbvxo"]
[ext_resource type="Texture2D" uid="uid://plb5ycy71i4b" path="res://Assets/UI/red_button00.png" id="7_sprij"]
[ext_resource type="Texture2D" uid="uid://b7ds0eoyc3qld" path="res://Assets/UI/red_button02.png" id="8_g51jp"]
[ext_resource type="Texture2D" uid="uid://dkhneqwh8vkr0" path="res://Assets/UI/green_button03.png" id="11_g1qis"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hmgxy")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("1_ilk43")
stretch_mode = 1

[node name="Menu" type="Control" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="Panel" type="TextureRect" parent="CenterContainer/Menu"]
layout_mode = 2
offset_left = -175.0
offset_top = -130.0
offset_right = 170.0
offset_bottom = 141.0
texture = ExtResource("3_p465g")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Menu"]
layout_mode = 2
offset_left = -164.0
offset_top = -129.0
offset_right = 163.0
offset_bottom = 128.0
alignment = 1

[node name="GameTitle" type="Label" parent="CenterContainer/Menu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.894118, 0, 0.141176, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dr338")
theme_override_font_sizes/font_size = 50
text = "Indy500!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/Menu/VBoxContainer"]
layout_mode = 2

[node name="StartGame" type="TextureButton" parent="CenterContainer/Menu/VBoxContainer/CenterContainer"]
layout_mode = 2
texture_normal = ExtResource("1_ygrvj")
texture_pressed = ExtResource("2_pum13")

[node name="Label" type="Label" parent="CenterContainer/Menu/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.258824, 0.141176, 0.152941, 1)
theme_override_fonts/font = ExtResource("2_dr338")
text = "Start"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/Menu/VBoxContainer"]
layout_mode = 2

[node name="Options" type="TextureButton" parent="CenterContainer/Menu/VBoxContainer/CenterContainer2"]
layout_mode = 2
texture_normal = ExtResource("3_p7m0o")
texture_pressed = ExtResource("4_lbvxo")

[node name="Label" type="Label" parent="CenterContainer/Menu/VBoxContainer/CenterContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.258824, 0.141176, 0.152941, 1)
theme_override_fonts/font = ExtResource("2_dr338")
text = "Options"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/Menu/VBoxContainer"]
layout_mode = 2

[node name="Credits" type="TextureButton" parent="CenterContainer/Menu/VBoxContainer/CenterContainer3"]
layout_mode = 2
texture_normal = ExtResource("3_p7m0o")
texture_pressed = ExtResource("4_lbvxo")

[node name="Label" type="Label" parent="CenterContainer/Menu/VBoxContainer/CenterContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.258824, 0.141176, 0.152941, 1)
theme_override_fonts/font = ExtResource("2_dr338")
text = "Credits"

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/Menu/VBoxContainer"]
layout_mode = 2

[node name="Exit" type="TextureButton" parent="CenterContainer/Menu/VBoxContainer/CenterContainer4"]
layout_mode = 2
texture_normal = ExtResource("7_sprij")
texture_pressed = ExtResource("8_g51jp")

[node name="Label" type="Label" parent="CenterContainer/Menu/VBoxContainer/CenterContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(0.258824, 0.141176, 0.152941, 1)
theme_override_fonts/font = ExtResource("2_dr338")
text = "Exit"

[node name="Options" type="Control" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="Panel" type="TextureRect" parent="CenterContainer/Options"]
layout_mode = 0
offset_left = -175.0
offset_top = -130.0
offset_right = 170.0
offset_bottom = 141.0
texture = ExtResource("3_p465g")

[node name="Title" type="Control" parent="CenterContainer/Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -3.0
offset_top = -101.0
offset_right = -3.0
offset_bottom = -101.0
grow_horizontal = 2
scale = Vector2(1.78233, 1.11396)

[node name="TextureRect" type="TextureRect" parent="CenterContainer/Options/Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -22.5
offset_right = 95.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_g1qis")

[node name="Label" type="Label" parent="CenterContainer/Options/Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -9.0
offset_right = 43.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.745098, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dr338")
text = "Options"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="TextureButton" parent="CenterContainer/Options/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_sprij")
texture_pressed = ExtResource("8_g51jp")

[node name="Label" type="Label" parent="CenterContainer/Options/VBoxContainer/Back"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="Credits" type="Control" parent="CenterContainer"]
layout_mode = 2

[node name="Panel" type="TextureRect" parent="CenterContainer/Credits"]
layout_mode = 0
offset_left = -175.0
offset_top = -130.0
offset_right = 170.0
offset_bottom = 141.0
texture = ExtResource("3_p465g")

[node name="Title" type="Control" parent="CenterContainer/Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -100.0
offset_right = -4.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.78233, 1.11396)

[node name="TextureRect" type="TextureRect" parent="CenterContainer/Credits/Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -22.5
offset_right = 95.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_g1qis")

[node name="Label" type="Label" parent="CenterContainer/Credits/Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -11.5
offset_right = 43.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.745098, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dr338")
text = "Credits"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="TextureButton" parent="CenterContainer/Credits/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_sprij")
texture_pressed = ExtResource("8_g51jp")

[node name="Label" type="Label" parent="CenterContainer/Credits/VBoxContainer/Back"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[connection signal="pressed" from="CenterContainer/Menu/VBoxContainer/CenterContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/VBoxContainer/CenterContainer2/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/VBoxContainer/CenterContainer3/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/VBoxContainer/CenterContainer4/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CenterContainer/Options/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/Credits/VBoxContainer/Back" to="." method="_on_back_pressed"]
